# Reps_Assignment

./: .dockerignore  .env.example  .firebaserc  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  firebase.json  pyproject.toml
assets/: aet_user_sub_001.json  aet_user_sub_002.json  aet_user_sub_003.json  aet_user_sub_004.json  amproxin_guide.json  ballistic_absorption_data.json  dosage_safety.json  gridmaster_blueprint.json  hexenon_m_surgical_specs.json  hexenon_x_impact_test.json  kstream_v_vorex.json  kyb_user_sub_1.json  kyb_user_sub_2.json  kyb_user_sub_3.json  kyb_user_sub_4.json  kyb_user_sub_5.json  kyb_user_sub_6.json  lumina_ux_guide.json  neuro_linker_diagram.json  non_toxic_polymer_standards.json  nuvia_lowdose.json  pain_comp_matrix.json  plating_layering_schema.json  sen_user_sub_10.json  sen_user_sub_11.json  sen_user_sub_12.json  sen_user_sub_7.json  sen_user_sub_8.json  sen_user_sub_9.json  sentilink_ai_speed.json  somnirel_benefits.json  somnirel_cases.json  spinal_bridge_case_study.json  stress_science.json  synthetic_sinew_demo.json  user_submission_001.json  user_submission_002.json  user_submission_003.json  user_submission_004.json  user_submission_005.json  (+23 more)
data/: raw_assets
database/: BigSpring_takehome_data - asset.csv  BigSpring_takehome_data - comapny.json  BigSpring_takehome_data - feedback.csv  BigSpring_takehome_data - play.csv  BigSpring_takehome_data - play_assignment.csv  BigSpring_takehome_data - rep.csv  BigSpring_takehome_data - submission.csv  BigSpring_takehome_data - users.csv
frontend/: .env.production  (+2 more)
(+55 files in other folders)
